feat(gui): add scan preview shader and rendering support